Updated conf for docs.

--- a/config/config.sample.docs.json
+++ b/config/config.sample.docs.json
@@ -44,7 +44,7 @@
                 },
                 {
                     "algorithm_id": "order_mcmc_itsample",
-                    "curve_variable": "chi"
+                    "curve_variable": "threshold"
                 }
             ]
         }
