--- a/config/config.sample.docs.fullysampled.json
+++ b/config/config.sample.docs.fullysampled.json
@@ -1,18 +1,41 @@
 {
     "benchmark_setup": {
         "data": [
-{
-                "graph_id": "hepar2.csv",
-                "parameters_id": null,
-                "data_id": "myhepar2data2000.csv",
-                "seed_range": null
+            {
+                "graph_id": "DAGavpar2p80",
+                "parameters_id": "generateBinaryBN",
+                "data_id": "iid160",
+                "seed_range": [
+                    1,
+                    5
+                ]
             }
         ],
         "evaluation": {
             "ROC": [
                 {
+                    "algorithm_id": "pcalg",
+                    "curve_variable": "alpha"
+                },
+                {
                     "algorithm_id": "tabu-bde",
                     "curve_variable": "iss"
+                },
+                {
+                    "algorithm_id": "mmhc",
+                    "curve_variable": "alpha"
+                },
+                {
+                    "algorithm_id": "fges-bdeu",
+                    "curve_variable": "samplePrior"
+                },
+                {
+                    "algorithm_id": "itsearch_sample",
+                    "curve_variable": "chi"
+                },
+                {
+                    "algorithm_id": "order_mcmc_itsample_chi1_thresh05",
+                    "curve_variable": "chi"
                 }
             ]
         }
@@ -21,16 +44,13 @@
         "data": {
             "standard_sampling": [
                 {
-                    "id": "independent_samples",
+                    "id": "iid160",
                     "sample_sizes": [
-                        80,
-                        160,
-                        320,
-                        640
+                        160
                     ]
                 },
                 {
-                    "id": "standard_sampling2000",
+                    "id": "iid2000",
                     "sample_sizes": [
                         2000
                     ]
@@ -47,7 +67,7 @@
             ],
             "generateDAGMaxParents": [
                 {
-                    "id": "generateDAGMaxParents",
+                    "id": "DAGavpar2p80",
                     "av_parents": [
                         2
                     ],
