--- a/config/config.sample.docs.fullysampled.json
+++ b/config/config.sample.docs.fullysampled.json
@@ -14,7 +14,7 @@
         "evaluation": {
             "ROC": [
                 {
-                    "algorithm_id": "pcalg",
+                    "algorithm_id": "pcalg-bin",
                     "curve_variable": "alpha"
                 },
                 {
