Updated configfiles for docs

--- a/config/config.sample.docs.fixedgraph.json
+++ b/config/config.sample.docs.fixedgraph.json
@@ -44,7 +44,7 @@
         "data": {
             "standard_sampling": [
                 {
-                    "id": "independent_samples",
+                    "id": "iid160",
                     "sample_sizes": [
                         160
                     ]
