--- a/config/config.sample.hepar2fixed.json
+++ b/config/config.sample.hepar2fixed.json
@@ -5,18 +5,70 @@
                 "graph_id": "hepar2.csv",
                 "parameters_id": null,
                 "data_id": "myhepar2data2000.csv",
-                "seed_range": [
-                    1,
-                    10
-                ]
+                "seed_range": null
             }
         ],
         "evaluation": {
             "ROC": [
-
+                {
+                    "algorithm_id": "winasobs",
+                    "curve_variable": "alpha"
+                },
+                {
+                    "algorithm_id": "asobs",
+                    "curve_variable": "alpha"
+                },
                 {
                     "algorithm_id": "gobnilp",
                     "curve_variable": "alpha"
+                },
+                {
+                    "algorithm_id": "tabu-bde",
+                    "curve_variable": "iss"
+                },
+                {
+                    "algorithm_id": "mmhc",
+                    "curve_variable": "alpha"
+                },
+                {
+                    "algorithm_id": "hc-bde",
+                    "curve_variable": "iss"
+                },
+                {
+                    "algorithm_id": "gs",
+                    "curve_variable": "alpha"
+                },
+                {
+                    "algorithm_id": "interiamb",
+                    "curve_variable": "alpha"
+                },
+                {
+                    "algorithm_id": "fci-disc",
+                    "curve_variable": "alpha"
+                },
+                {
+                    "algorithm_id": "rfci-disc",
+                    "curve_variable": "alpha"
+                },
+                {
+                    "algorithm_id": "gfci-bdeu",
+                    "curve_variable": "alpha"
+                },
+                {
+                    "algorithm_id": "fges-bdeu",
+                    "curve_variable": "samplePrior"
+                },
+                {
+                    "algorithm_id": "itsearch_map",
+                    "curve_variable": "chi"
+                },
+                {
+                    "algorithm_id": "itsearch_sample",
+                    "curve_variable": "chi"
+                },
+                {
+                    "algorithm_id": "order_mcmc_itsample_chi1_thresh05",
+                    "curve_variable": "chi"
                 }
                 
             ]
