Cleaned upp snakefile. Updated config cont data.

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -183,9 +183,7 @@ def gen_adjmat_string_from_conf(adjmat_id, seed):
     
     if adjmat_id in [c["id"] for c in config["resources"]["graph"]["generateDAGMaxParents"]]:
         adjmat_dict = next(item for item in config["resources"]["graph"]["generateDAGMaxParents"] if item["id"] == adjmat_id)
-        return expand(pattern_strings["generateDAGMaxParents"] +   "/seed={seed}",
-            **adjmat_dict,
-            seed=seed)
+        return expand(pattern_strings["generateDAGMaxParents"] +   "/seed={seed}", **adjmat_dict, seed=seed)
 
     elif Path("resources/adjmat/myadjmats/"+adjmat_id).is_file():
         filename_no_ext = os.path.splitext(os.path.basename(adjmat_id))[0]
@@ -193,17 +191,11 @@ def gen_adjmat_string_from_conf(adjmat_id, seed):
 
     elif adjmat_id in [c["id"] for c in config["resources"]["graph"]["notears"]]: 
         adjmat_dict = next(item for item in config["resources"]["graph"]["notears"] if item["id"] == adjmat_id)
-        return expand(pattern_strings["notears_dag"] + \
-                        "/seed={seed}",
-                        **adjmat_dict,
-                        seed=seed)
+        return expand(pattern_strings["notears_dag"] + "/seed={seed}", **adjmat_dict, seed=seed)
 
     elif adjmat_id in [c["id"] for c in config["resources"]["graph"]["DAGavparents"]]:
         adjmat_dict = next(item for item in config["resources"]["graph"]["DAGavparents"] if item["id"] == adjmat_id)
-        return expand(
-                    pattern_strings["DAGavparents"] + "/seed={seed}",
-                    **adjmat_dict,
-                    seed=seed)
+        return expand(pattern_strings["DAGavparents"] + "/seed={seed}", **adjmat_dict, seed=seed)
 
     elif adjmat_id is None:
         return None
@@ -214,27 +206,18 @@ def gen_parameter_string_from_conf(gen_method_id, seed):
 
     if gen_method_id in [c["id"] for c in config["resources"]["parameters"]["generateBinaryBN"]]:        
         curconf = next(item for item in config["resources"]["parameters"]["generateBinaryBN"] if item["id"] == gen_method_id)
-        return expand(pattern_strings["generateBinaryBN"] + \
-                        "/seed={seed}",
-                        **curconf,
-                        seed=seed)
+        return expand(pattern_strings["generateBinaryBN"] + "/seed={seed}", **curconf, seed=seed)
 
     elif gen_method_id in [c["id"] for c in config["resources"]["parameters"]["pcalg_sem_params"]]:        
         curconf = next(item for item in config["resources"]["parameters"]["pcalg_sem_params"] if item["id"] == gen_method_id)
-        return expand(pattern_strings["pcalg_sem_params"] + 
-                        "/seed={seed}",
-                        **curconf,
-                        seed=seed)
+        return expand(pattern_strings["pcalg_sem_params"] + "/seed={seed}", **curconf, seed=seed)
 
     elif Path("resources/bn/bn.fit_networks/"+str(gen_method_id)).is_file():
         return  "bn.fit_networks/" + gen_method_id # gen_method_id could be hepar2.rds e.g.
 
     elif gen_method_id in [c["id"] for c in config["resources"]["parameters"]["notears_parameters_sampling"]]:
         curconf = next(item for item in config["resources"]["parameters"]["notears_parameters_sampling"] if item["id"] == gen_method_id)
-        return expand(pattern_strings["notears_parameters_sampling"] + \
-                      "/seed={seed}",
-                      **curconf,
-                      seed=seed)
+        return expand(pattern_strings["notears_parameters_sampling"] + "/seed={seed}", **curconf, seed=seed)
 
     elif gen_method_id is None:
         return None
