--- a/config/config.sample.gauss.json
+++ b/config/config.sample.gauss.json
@@ -7,7 +7,7 @@
                 "data_id": "independent_samples",
                 "seed_range": [
                     1,
-                    1
+                    5
                 ]
             }
         ],
@@ -27,15 +27,7 @@
                 },
                 {
                     "algorithm_id": "hc-bge",
-                    "curve_variable": "iss.mu"
-                },
-                {
-                    "algorithm_id": "gs",
-                    "curve_variable": "alpha"
-                },
-                {
-                    "algorithm_id": "interiamb",
-                    "curve_variable": "alpha"
+                    "curve_variable": "issmu"
                 },
                 {
                     "algorithm_id": "fci-cont",
@@ -46,7 +38,7 @@
                     "curve_variable": "alpha"
                 },
                 {
-                    "algorithm_id": "gfci-cgbic",
+                    "algorithm_id": "gfci-sem-bic",
                     "curve_variable": "alpha"
                 },
                 {
@@ -54,7 +46,7 @@
                     "curve_variable": "alpha"
                 },
                 {
-                    "algorithm_id": "fges-cgbic",
+                    "algorithm_id": "fges-sem-bic",
                     "curve_variable": "samplePrior"
                 },
                 {
@@ -282,9 +274,9 @@
             ],
             "fges": [
                 {
-                    "id": "fges-cgbic",
+                    "id": "fges-sem-bic",
                     "faithfulnessAssumed": true,
-                    "score": "cg-bic-score",
+                    "score": "sem-bic",
                     "datatype": "continuous",
                     "samplePrior": [
                         1,
@@ -353,7 +345,7 @@
                     "structurePrior": 1
                 },
                 {
-                    "id": "gfci-cgbic",
+                    "id": "gfci-sem-bic",
                     "alpha": [
                         0.01,
                         0.05,
@@ -362,7 +354,7 @@
                         0.35,
                         0.45
                     ],
-                    "score": "cg-bic-score",
+                    "score": "sem-bic",
                     "test": "cg-lr-test",
                     "datatype": "continuous",
                     "structurePrior": 1
@@ -528,7 +520,10 @@
                     "id": "tabu-bge",
                     "score": "bge",
                     "iss": 1,
-                    "issmu": 1,
+                    "issmu": [1,
+                        10,
+                        50,
+                        100],
                     "l": 5,
                     "k": 1,
                     "prior": "uniform",
@@ -559,7 +554,10 @@
                     "id": "hc-bge",
                     "score": "bge",
                     "iss": 1,
-                    "issmu": 1,
+                    "issmu": [1,
+                        10,
+                        50,
+                        100],
                     "l": 5,
                     "k": 1,
                     "prior": "uniform",
