Updated config ids.

--- a/config/config.sample.gauss.json
+++ b/config/config.sample.gauss.json
@@ -15,7 +15,7 @@
             "ROC": [
                 {
                     "algorithm_id": "tabu-bge",
-                    "curve_variable": "iss"
+                    "curve_variable": "issmu"
                 },
                 {
                     "algorithm_id": "mmhc",
