--- a/config/config.sample.binary.json
+++ b/config/config.sample.binary.json
@@ -14,15 +14,15 @@
         "evaluation": {
             "ROC": [
                 {
-                    "algorithm_id": "winasobs",
+                    "algorithm_id": "winasobs-bdeu",
                     "curve_variable": "alpha"
                 },
                 {
-                    "algorithm_id": "asobs",
+                    "algorithm_id": "asobs-bdeu",
                     "curve_variable": "alpha"
                 },
                 {
-                    "algorithm_id": "gobnilp",
+                    "algorithm_id": "gobnilp-bde",
                     "curve_variable": "alpha"
                 },
                 {
@@ -30,7 +30,7 @@
                     "curve_variable": "iss"
                 },
                 {
-                    "algorithm_id": "mmhc",
+                    "algorithm_id": "mmhc-mi",
                     "curve_variable": "alpha"
                 },
                 {
@@ -38,27 +38,27 @@
                     "curve_variable": "iss"
                 },
                 {
-                    "algorithm_id": "gs",
+                    "algorithm_id": "gs-mi",
                     "curve_variable": "alpha"
                 },
                 {
-                    "algorithm_id": "interiamb",
+                    "algorithm_id": "interiamb-mi",
                     "curve_variable": "alpha"
                 },
                 {
-                    "algorithm_id": "fci-disc",
+                    "algorithm_id": "fci-chi-square",
                     "curve_variable": "alpha"
                 },
                 {
-                    "algorithm_id": "rfci-disc",
+                    "algorithm_id": "rfci-chi-square",
                     "curve_variable": "alpha"
                 },
                 {
-                    "algorithm_id": "gfci-bdeu",
+                    "algorithm_id": "gfci-bdeu-chi-square",
                     "curve_variable": "alpha"
                 },
                 {
-                    "algorithm_id": "pcalg-bin",
+                    "algorithm_id": "pcalg-binCItest",
                     "curve_variable": "alpha"
                 },
                 {
@@ -66,15 +66,15 @@
                     "curve_variable": "samplePrior"
                 },
                 {
-                    "algorithm_id": "itsearch_map",
+                    "algorithm_id": "itsearch_map-bde",
                     "curve_variable": "chi"
                 },
                 {
-                    "algorithm_id": "itsearch_sample",
+                    "algorithm_id": "itsearch_sample-bde",
                     "curve_variable": "chi"
                 },
                 {
-                    "algorithm_id": "order_mcmc_itsample_chi1_thresh05",
+                    "algorithm_id": "omcmc_itsample-bde",
                     "curve_variable": "chi"
                 }
             ]
@@ -101,6 +101,17 @@
             ]
         },
         "graph": {
+            "DAGavparents": [
+                {
+                    "id": "DAG80",
+                    "av_parents": [
+                        2
+                    ],
+                    "dim": [
+                       80
+                    ]
+                }
+            ],
             "notears": [
                 {
                     "id": "notears",
@@ -136,9 +147,17 @@
                     "mean": 0,
                     "variance": 1
                 }
+            ],
+            "pcalg_sem_params": [
+                {
+                    "id": "SEM",
+                    "min": 0.25,
+                    "max": 1
+                }
             ]
         },
         "structure_learning_algorithms": {
+
             "trilearn_loglin": [
                 {
                     "id": "trilearn_loglin",
@@ -168,7 +187,7 @@
             ],
             "blip": [
                 {
-                    "id": "winasobs",
+                    "id": "winasobs-bdeu",
                     "scorermethod": "is",
                     "solvermethod": "winasobs",
                     "indeg": 80,
@@ -189,7 +208,7 @@
                     "verbose": 0
                 },
                 {
-                    "id": "asobs",
+                    "id": "asobs-bdeu",
                     "scorermethod": "is",
                     "solvermethod": "asobs",
                     "indeg": 80,
@@ -222,7 +241,7 @@
             ],
             "gobnilp": [
                 {
-                    "id": "gobnilp",
+                    "id": "gobnilp-bde",
                     "plot": false,
                     "palim": 2,
                     "alpha": [
@@ -246,19 +265,6 @@
             ],
             "fges": [
                 {
-                    "id": "fges-cgbic",
-                    "faithfulnessAssumed": true,
-                    "score": "cg-bic-score",
-                    "datatype": "continuous",
-                    "samplePrior": [
-                        1,
-                        10,
-                        50,
-                        100
-                    ],
-                    "structurePrior": 1
-                },
-                {
                     "id": "fges-bdeu",
                     "faithfulnessAssumed": true,
                     "score": "bdeu-score",
@@ -269,25 +275,13 @@
                         50,
                         100
                     ],
-                    "structurePrior": 1
+                    "structurePrior": 1,
+                    "penaltyDiscount": null
                 }
             ],
             "fci": [
                 {
-                    "id": "fci-cont",
-                    "alpha": [
-                        0.01,
-                        0.05,
-                        0.1,
-                        0.2,
-                        0.35,
-                        0.45
-                    ],
-                    "test": "cg-lr-test",
-                    "datatype": "continuous"
-                },
-                {
-                    "id": "fci-disc",
+                    "id": "fci-chi-square",
                     "alpha": [
                         0.01,
                         0.05,
@@ -302,7 +296,7 @@
             ],
             "gfci": [
                 {
-                    "id": "gfci-bdeu",
+                    "id": "gfci-bdeu-chi-square",
                     "alpha": [
                         0.01,
                         0.05,
@@ -311,43 +305,16 @@
                         0.35,
                         0.45
                     ],
+                    "penaltyDiscount": null,
                     "score": "bdeu-score",
                     "test": "chi-square-test",
                     "datatype": "discrete",
-                    "structurePrior": 1
-                },
-                {
-                    "id": "gfci-cgbic",
-                    "alpha": [
-                        0.01,
-                        0.05,
-                        0.1,
-                        0.2,
-                        0.35,
-                        0.45
-                    ],
-                    "score": "cg-bic-score",
-                    "test": "cg-lr-test",
-                    "datatype": "continuous",
-                    "structurePrior": 1
+                    "structurePrior": 1                    
                 }
             ],
             "rfci": [
                 {
-                    "id": "rfci-cont",
-                    "alpha": [
-                        0.01,
-                        0.05,
-                        0.1,
-                        0.2,
-                        0.35,
-                        0.45
-                    ],
-                    "test": "cg-lr-test",
-                    "datatype": "continuous"
-                },
-                {
-                    "id": "rfci-disc",
+                    "id": "rfci-chi-square",
                     "alpha": [
                         0.01,
                         0.05,
@@ -362,7 +329,7 @@
             ],
             "pcalg": [
                 {
-                    "id": "pcalg-bin",
+                    "id": "pcalg-binCItest",
                     "alpha": [
                         0.01,
                         0.05,
@@ -372,42 +339,6 @@
                         0.45,
                         0.5
                     ],
-                    "NAdelete": true,
-                    "mmax": "Inf",
-                    "u2pd": "relaxed",
-                    "skelmethod": "stable",
-                    "conservative": false,
-                    "majrule": false,
-                    "solveconfl": false,
-                    "numCores": 1,
-                    "verbose": false,
-                    "indepTest": "binCItest"
-                },
-                {
-                    "id": "pcalg-gauss",
-                    "alpha": [
-                        0.01,
-                        0.05,
-                        0.1,
-                        0.2,
-                        0.35,
-                        0.45,
-                        0.5
-                    ],
-                    "NAdelete": true,
-                    "mmax": "Inf",
-                    "u2pd": "relaxed",
-                    "skelmethod": "stable",
-                    "conservative": false,
-                    "majrule": false,
-                    "solveconfl": false,
-                    "numCores": 1,
-                    "verbose": false,
-                    "indepTest": "gaussCItest"
-                },
-                {
-                    "id": "pcalg005-bin",
-                    "alpha": 0.05,
                     "NAdelete": true,
                     "mmax": "Inf",
                     "u2pd": "relaxed",
@@ -422,7 +353,7 @@
             ],
             "mmhc": [
                 {
-                    "id": "mmhc",
+                    "id": "mmhc-mi",
                     "alpha": [
                         0.01,
                         0.05,
@@ -436,7 +367,7 @@
             ],
             "interiamb": [
                 {
-                    "id": "interiamb",
+                    "id": "interiamb-mi",
                     "alpha": [
                         0.01,
                         0.05,
@@ -454,7 +385,7 @@
             ],
             "gs": [
                 {
-                    "id": "gs",
+                    "id": "gs-mi",
                     "alpha": [
                         0.01,
                         0.05,
@@ -487,16 +418,6 @@
                     "k": 1,
                     "prior": "uniform",
                     "beta": 1
-                },
-                {
-                    "id": "tabu-bge",
-                    "score": "bge",
-                    "iss": 1,
-                    "issmu": 1,
-                    "l": 5,
-                    "k": 1,
-                    "prior": "uniform",
-                    "beta": 1
                 }
             ],
             "hc": [
@@ -518,23 +439,11 @@
                     "beta": 1,
                     "restart": 0,
                     "perturb": 1
-                },
-                {
-                    "id": "hc-bge",
-                    "score": "bge",
-                    "iss": 1,
-                    "issmu": 1,
-                    "l": 5,
-                    "k": 1,
-                    "prior": "uniform",
-                    "beta": 1,
-                    "restart": 0,
-                    "perturb": 1
                 }
             ],
             "itsearch": [
                 {
-                    "id": "itsearch_map",
+                    "id": "itsearch_map-bde",
                     "estimate": "map",
                     "MAP": true,
                     "plus1it": null,
@@ -559,25 +468,7 @@
                     "mergetype": "skeleton"
                 },
                 {
-                    "id": "itsearch_map_cont",
-                    "estimate": "map",
-                    "MAP": true,
-                    "plus1it": null,
-                    "posterior": null,
-                    "scoretype": "bge",
-                    "chi": null,
-                    "edgepf": null,
-                    "am": 1,
-                    "aw": null,
-                    "softlimit": 9,
-                    "hardlimit": 12,
-                    "alpha": 0.05,
-                    "gamma": 1,
-                    "cpdag": false,
-                    "mergetype": "skeleton"
-                },
-                {
-                    "id": "itsearch_sample",
+                    "id": "itsearch_sample-bde",
                     "estimate": "map",
                     "MAP": false,
                     "plus1it": 6,
@@ -676,8 +567,8 @@
             ],
             "order_mcmc": [
                 {
-                    "id": "order_mcmc_itmap",
-                    "startspace_algorithm": "itsearch_map",
+                    "id": "omcmc_itmap",
+                    "startspace_algorithm": "itsearch_map-bde",
                     "plus1": true,
                     "scoretype": "bdecat",
                     "chi": [
@@ -712,37 +603,8 @@
                     "burnin": 0
                 },
                 {
-                    "id": "order_mcmc_itmap_cont",
-                    "startspace_algorithm": "itsearch_map_cont",
-                    "plus1": true,
-                    "scoretype": "bge",
-                    "chi": null,
-                    "edgepf": null,
-                    "aw": null,
-                    "am": 1,
-                    "alpha": 0.05,
-                    "gamma": 1,
-                    "stepsave": null,
-                    "iterations": null,
-                    "MAP": true,
-                    "cpdag": false,
-                    "threshold": [
-                        0.99,
-                        0.95,
-                        0.9,
-                        0.8,
-                        0.7,
-                        0.6,
-                        0.5,
-                        0.4,
-                        0.3,
-                        0.2
-                    ],
-                    "burnin": 0
-                },
-                {
-                    "id": "order_mcmc_itsample",
-                    "startspace_algorithm": "itsearch_sample",
+                    "id": "omcmc_itsample-bde",
+                    "startspace_algorithm": "itsearch_sample_chi1",
                     "plus1": true,
                     "scoretype": "bdecat",
                     "chi": [
